[HT-624] Local nav - Fixing padding on mobile. Putting white back on the desktop version of the local nav.

--- a/health/sass/_shame.scss
+++ b/health/sass/_shame.scss
@@ -416,6 +416,9 @@ body:not(.node-type-health-topic) {
 
   @include uikit-clearfix;
   @extend %colour-Light-background;
+  @include uikit-media(sm) {
+    background: white;
+  }
 
   #block-bean-local-navigation-menu-toggle-for {
     float: left;
